[tool.poetry]
name = "nasa-sbir"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
pandas = "*"
loguru = "*"
tqdm = "*"
flask = "*"
pdfplumber = "*"
pymupdf4llm = "*"
ollama = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
